[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ultan"
version = "0.1.0"
description = "Ultan — terminal-first worldbuilding recorder"
requires-python = ">=3.8.8"
dependencies = [
  "typer>=0.12.0",
  "openai>=1.0.0",
]

[project.scripts]
ultan = "ultan.cli:app"

[tool.setuptools.packages.find]
include = ["ultan*"]
exclude = ["worlds*"]